crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__help_overlay.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
assertion_line: 445
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Settings────────────────────────────────────────┐┌Compatibility─────────────────────────────────────────────┐"
"│Up/Down select. e edits. Space toggles. s saves.││Binary: $HOME/.local/share/lmml/llama.cpp/build/bin│"
"│State path: /home/an┌Help──────────────────────────────────────────────────────────────┐                    │"
"│                    │1-5        switch tabs                                            │                    │"
"│  build_runtime upst│Tab        next tab                                               │                    │"
"│  runtime       auto│Shift+Tab  previous tab                                           │                    │"
"│  host          127.│d          run detect                                             │lama-server build   │"
"│> port          8080│b          start build                                            │                    │"
"│  ctx_size      2621│B          clean build                                            │                    │"
"│  n_gpu_layers  -1  │u          check for update                                       │                    │"
"│  batch_size    512 │s          start server / save settings                           │                    │"
"│  ubatch_size   512 │e          edit selected setting                                  │                    │"
"│  threads       8  [│p          probe server flags                                     │                    │"
"│  flash_attn    true│Space      toggle selected setting                                │                    │"
"│  mlock         fals│m          quick-swap server model                                │                    │"
"│  api_key         [e│v          cycle runtime policy                                   │                    │"
"│  jinja         fals│r          scan models                                            │                    │"
"│  chat_template   [e│/          open HF search                                         │                    │"
"│  extra_args      [e│D          download selected HF result                            │                    │"
"│                    │a          add model alias                                        │                    │"
"│Error: port must be │?          close help                                             │                    │"
"│                    │q/Ctrl+C   quit                                                   │                    │"
"│                    │                                                                  │                    │"
"│                    │                                                                  │                    │"
"│                    │                                                                  │                    │"
"│                    └──────────────────────────────────────────────────────────────────┘                    │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
