crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__models_empty.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Models──────────────────────────────────────────┐┌Model Details─────────────────────────────────────────────┐"
"│Press r to scan local models.                   ││Last model:                                               │"
"│Press / to search Hugging Face. Press D to downl││                                                          │"
"│Press a to add a model alias. Press x to delete ││                                                          │"
"│Press p for model profile. Press v for runtime p││                                                          │"
"│Models dir: $HOME/.local/share/lmml/model││                                                          │"
"│                                                ││                                                          │"
"│No models found.                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
