crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__models_hf_search_open.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Models──────────────────────────────────────────┐┌Model Details─────────────────────────────────────────────┐"
"│Press r to scan local models.                   ││Query: mistral gguf                                       │"
"│Press / to search Hugging Face. Press D to downl││Results: 1                                                │"
"│Press a to add a model alias. Press x to delete ││                                                          │"
"│Press p for model profile. Press v for runtime p││> org/mistral / mistral-7b-Q4_K_M.gguf  3.8 GB  1234 downl│"
"│Models dir: $HOME/.local/share/lmml/model││                                                          │"
"│                                                ││                                                          │"
"│> mistral-7b-Q4_K_M.gguf  3.8 GB  Q4_K_M  fits (││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
