crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__models_known_family_details.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Models──────────────────────────────────────────┐┌Model Details─────────────────────────────────────────────┐"
"│Press r to scan local models.                   ││Name: gemma-4-12b-it-qat-q4_0.gguf                        │"
"│Press / to search Hugging Face. Press D to downl││Path: gemma-4-12b-it-qat-q4_0.gguf                        │"
"│Press a to add a model alias. Press x to delete ││Runtime profile: custom/global                            │"
"│Press p for model profile. Press v for runtime p││Size: 6.7 GB                                              │"
"│Models dir: $HOME/.local/share/lmml/model││Quant: Q4_K_M                                             │"
"│                                                ││Required runtime: upstream                                │"
"│> gemma-4-12b-it-qat-q4_0.gguf  6.7 GB  Q4_K_M  ││Tensor type IDs: none detected                            │"
"│                                                ││Architecture: llama                                       │"
"│                                                ││Context: 4096                                             │"
"│                                                ││Alias: false                                              │"
"│                                                ││VRAM: fits (16941 MB free)                                │"
"│                                                ││Recommended ngl: -1                                       │"
"│                                                ││Runtime binary: $HOME/.local/share/lmml/llama.cpp/b│"
"│                                                ││                                                          │"
"│                                                ││Known model family                                        │"
"│                                                ││Family: Gemma 4                                           │"
"│                                                ││Variant: Gemma 4 12B                                      │"
"│                                                ││Architecture: dense                                       │"
"│                                                ││Native context: 256000                                    │"
"│                                                ││Modalities: text, vision, video, audio                    │"
"│                                                ││Implementation: encoder-free unified multimodal model with│"
"│                                                ││Guidance: LMML MTP profile target for 16GB GPUs with Q4/QA│"
"│                                                ││Note: native roles: system, user, assistant               │"
"│                                                ││Note: thinking is toggled with the <|think|> token in the │"
"│                                                ││Note: prefer official Google QAT q4_0 GGUF checkpoints for│"
"│                                                ││Note: all Gemma 4 sizes ship MTP draft support; use a matc│"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
