crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__server_failed.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Server──────────────────────────────────────────┐┌Server Log────────────────────────────────────────────────┐"
"│Press s to start server.                        ││server listening                                          │"
"│Press p to switch runtime profile.              ││                                                          │"
"│Status: Failed { reason: "llama-server exited wi││                                                          │"
"│Profile: custom/global                          ││                                                          │"
"│Selected model: llama.gguf                      ││                                                          │"
"│Runtime: upstream                               ││                                                          │"
"│Runtime commit: unknown                         ││                                                          │"
"│Binary: $HOME/.local/share/lmml/llama.cpp││                                                          │"
"│Host: 127.0.0.1                                 ││                                                          │"
"│Port: 8080                                      ││                                                          │"
"│Context: 4096                                   ││                                                          │"
"│GPU layers: auto -> -1                          ││                                                          │"
"│Batch: 512                                      ││                                                          │"
"│Threads: 8                                      ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: failed llama-server exited with status 1  Ready  [?] Help  [q] Quit                             "
